// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner /> stories Brand story renders snapshot 1`] = `
<article
  class="banner banner--brand banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--brand"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories BrandDismissable story renders snapshot 1`] = `
<article
  class="banner banner--brand banner--horizontal banner--dismissable"
>
  <button
    class="clickable-style button banner__close-btn button--icon clickable-style--lg clickable-style--icon clickable-style--brand"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="mock-id"
      >
        dismiss module
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--brand"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories BrandWithAction story renders snapshot 1`] = `
<article
  class="banner banner--brand banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--brand"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style button button--secondary clickable-style--lg clickable-style--secondary clickable-style--brand"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories DismissableBelowContent story renders snapshot 1`] = `
<h1
  class="heading heading--size-h1"
>
  Page Title
</h1>
`;

exports[`<Banner /> stories DismissableWithAction story renders snapshot 1`] = `
<article
  class="banner banner--brand banner--horizontal banner--dismissable"
>
  <button
    class="clickable-style button banner__close-btn button--icon clickable-style--lg clickable-style--icon clickable-style--brand"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="mock-id"
      >
        dismiss module
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--brand"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style button button--secondary clickable-style--lg clickable-style--secondary clickable-style--brand"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories Error story renders snapshot 1`] = `
<article
  class="banner banner--error banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      error
    </title>
    <use
      xlink:href="test-file-stub#dangerous"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--error"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories ErrorDismissable story renders snapshot 1`] = `
<article
  class="banner banner--error banner--horizontal banner--dismissable"
>
  <button
    class="clickable-style button banner__close-btn button--icon clickable-style--lg clickable-style--icon clickable-style--error"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="mock-id"
      >
        dismiss module
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      error
    </title>
    <use
      xlink:href="test-file-stub#dangerous"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--error"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories ErrorWithAction story renders snapshot 1`] = `
<article
  class="banner banner--error banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      error
    </title>
    <use
      xlink:href="test-file-stub#dangerous"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--error"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style button button--secondary clickable-style--lg clickable-style--secondary clickable-style--error"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories Flat story renders snapshot 1`] = `
<article
  class="banner banner--brand banner--horizontal banner--flat"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--brand"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories Neutral story renders snapshot 1`] = `
<article
  class="banner banner--neutral banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      notice
    </title>
    <use
      xlink:href="test-file-stub#forum"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--neutral"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories NeutralDismissable story renders snapshot 1`] = `
<article
  class="banner banner--neutral banner--horizontal banner--dismissable"
>
  <button
    class="clickable-style button banner__close-btn button--icon clickable-style--lg clickable-style--icon clickable-style--neutral"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="mock-id"
      >
        dismiss module
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      notice
    </title>
    <use
      xlink:href="test-file-stub#forum"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--neutral"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories NeutralWithAction story renders snapshot 1`] = `
<article
  class="banner banner--neutral banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      notice
    </title>
    <use
      xlink:href="test-file-stub#forum"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--neutral"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style button button--secondary clickable-style--lg clickable-style--secondary clickable-style--neutral"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories NoDescription story renders snapshot 1`] = `
<article
  class="banner banner--brand banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories NoTitle story renders snapshot 1`] = `
<article
  class="banner banner--brand banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--brand"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories Success story renders snapshot 1`] = `
<article
  class="banner banner--success banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      success
    </title>
    <use
      xlink:href="test-file-stub#check-circle"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--success"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories SuccessDismissable story renders snapshot 1`] = `
<article
  class="banner banner--success banner--horizontal banner--dismissable"
>
  <button
    class="clickable-style button banner__close-btn button--icon clickable-style--lg clickable-style--icon clickable-style--success"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="mock-id"
      >
        dismiss module
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      success
    </title>
    <use
      xlink:href="test-file-stub#check-circle"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--success"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories SuccessWithAction story renders snapshot 1`] = `
<article
  class="banner banner--success banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      success
    </title>
    <use
      xlink:href="test-file-stub#check-circle"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--success"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style button button--secondary clickable-style--lg clickable-style--secondary clickable-style--success"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories Vertical story renders snapshot 1`] = `
<article
  class="banner banner--brand"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--brand"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories VerticalDismissable story renders snapshot 1`] = `
<article
  class="banner banner--brand banner--dismissable"
>
  <button
    class="clickable-style button banner__close-btn button--icon clickable-style--lg clickable-style--icon clickable-style--brand"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="mock-id"
      >
        dismiss module
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--brand"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories VerticalDismissableWithAction story renders snapshot 1`] = `
<article
  class="banner banner--brand banner--dismissable"
>
  <button
    class="clickable-style button banner__close-btn button--icon clickable-style--lg clickable-style--icon clickable-style--brand"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="mock-id"
      >
        dismiss module
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--brand"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style button button--secondary clickable-style--lg clickable-style--secondary clickable-style--brand"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories VerticalWithAction story renders snapshot 1`] = `
<article
  class="banner banner--brand"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      attention
    </title>
    <use
      xlink:href="test-file-stub#notifications"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--brand"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style button button--secondary clickable-style--lg clickable-style--secondary clickable-style--brand"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories Warning story renders snapshot 1`] = `
<article
  class="banner banner--warning banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      warning
    </title>
    <use
      xlink:href="test-file-stub#warning"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--warning"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories WarningDismissable story renders snapshot 1`] = `
<article
  class="banner banner--warning banner--horizontal banner--dismissable"
>
  <button
    class="clickable-style button banner__close-btn button--icon clickable-style--lg clickable-style--icon clickable-style--warning"
    type="button"
  >
    <svg
      class="icon"
      fill="currentColor"
      role="img"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="mock-id"
      >
        dismiss module
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      warning
    </title>
    <use
      xlink:href="test-file-stub#warning"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--warning"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
  </div>
</article>
`;

exports[`<Banner /> stories WarningWithAction story renders snapshot 1`] = `
<article
  class="banner banner--warning banner--horizontal"
>
  <svg
    class="icon banner__icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      warning
    </title>
    <use
      xlink:href="test-file-stub#warning"
    />
  </svg>
  <div
    class="banner__textAndAction"
  >
    <div
      class="banner__textContent"
    >
      <h3
        class="heading heading--size-h5"
      >
        New curriculum updates are available for one or more of your courses.
      </h3>
      <p
        class="text text--body"
      >
        Summit Learning has a full-time team dedicated to constantly improving our curriculum. To see the updates,
         
        <button
          class="clickable-style button button--link clickable-style--link clickable-style--warning"
          href="/"
          type="button"
        >
          click into the course
        </button>
        .
      </p>
    </div>
    <div
      class="banner__action"
    >
      <button
        class="clickable-style button button--secondary clickable-style--lg clickable-style--secondary clickable-style--warning"
        type="button"
      >
        See updates
      </button>
    </div>
  </div>
</article>
`;
